--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,53 @@
-# This is a basic workflow to help you get started with Actions
+name: Postalk App Pipeline
 
-name: CI
-
-# Controls when the workflow will run
+# Set up how the workflow is triggered
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Trigger the workflow on push or pull request events on the main branch
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+  # Allow triggering this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# Set up the job for this workflow
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  # This workflow contains a single job that we are calling "build-and-test"
+  build-and-test:
+
+    # The runner environment to use
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
+    # Steps mostly contain CLI commands (via "run") and actions (via "uses")
+    # Each step begins with a hyphen -
+    steps:       
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      # You can optionally provide a name before a step. This is an example of an unnamed step.
+      - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Runs a single echo command using the runners shell
+      - run: echo Entering Django CI/CD Pipeline!
+      
+      # Uses the action setup-python@v2, specifying version 3.9
+      # This installs Python 3.9 to the runner environment
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9         
+      # Runs a set of commands to install dependencies in the runner environment
+      - name: Install dependencies
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+     
+      # Runs database migrations on the Django app
+      - name: Run migrations
+        run: python manage.py migrate
+      
+      # Run all tests with verbose flag
+      - name: Run all tests
+        run: pytest -v
