--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,38 @@
-# This is a basic workflow to help you get started with Actions
+name: Hello Test Python Versions
 
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+on: push
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  hello-test-python-versions:
+    strategy:
+      matrix:
+        python-version: ['3.6', '3.7', '3.8']
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+    
+      # Runs a single command using the runners shell, using run:
+      - run: echo "Job automatically triggered by event ${{ github.event_name }}."
+      
+      # Runs a set of commands using the runners shell, using run: |
+      - run: |
+          echo "Job running on a ${{ runner.os }} server hosted by GitHub."
+          echo "On branch ${{ github.ref }} of repository ${{ github.repository }}."
+          
+      - name: Check out repository code so it can be run by GitHub
+        uses: actions/checkout@v2
+        
+      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
+      
+      - name: List files in repository
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo "The contents of the repository are:"
+          ls ${{ github.workspace }}
+
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+          
+      - run: echo "Python has been set up."
+       
